playing on plane with web layout

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,45 @@
-serving index page
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <script language="javascript" type="text/javascript" src="/scripts/jquery-1.6.2.js" ></script>
+    <script language="javascript" type="text/javascript" src="/scripts/underscore.js" ></script>
+    <title>FantasyMarch</title>
+  </head>
+  <body>
+    <h1>Fantasy March Madness 2012 Standings</h1>
+    <ul class='teams'>
+      <li>
+      </li>
+    </ul>
+    <script type="text/javascript">
+      $.getJSON('/standings', [], function(teams){
+          _.each(teams, function(team){
+            var teamTotal = 0;
+            var ulTeam = $('<ul>').addClass('team');
+            var teamPlayers = $('<ul>').addClass('players');
+            ulTeam.append($('<li>').addClass('team-title').text(team.team));
+
+            _.each(team.players, function(player){
+              var liPlayer = $('<li>').addClass('player').text(player.name);
+              var ulPlayerPoints = $('<ul>').addClass('player-points');
+              var total = 0;
+              
+              _.each(player.points, function(points, gameId){
+                total += points;
+                ulPlayerPoints.append($('<li>').addClass('player-point').text(points));
+                });
+
+              ulPlayerPoints.append($('<li>').addClass('player-total').text(total));
+              liPlayer.append(ulPlayerPoints);
+              teamPlayers.append(liPlayer);
+              teamTotal += total;
+              });
+
+            ulTeam.append($('<li>').addClass('team-total').text(teamTotal));
+            ulTeam.append(teamPlayers);
+            $('.teams').find('li').append(ulTeam);
+            });
+          });
+    </script>
+  </body>
+</html>
