--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <li class='teams'></li>
     <script type="text/javascript">
       loadStandings();
+      setInterval(loadStandings, 1000 * 60);
     </script>
   </body>
 </html>
