improving layout for iphone; adding last updated field for index page; adding link to index from team edit page

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Fantasy March Madness 2012 Standings</h1>
+    <p class='updated'></p>
     <li class='teams'></li>
     <script type="text/javascript">
       loadStandings();
