--- a/public/teams.html
+++ b/public/teams.html
@@ -10,6 +10,9 @@
   </head>
   <body>
     <h1>Team Update Page</h1>
+    <p>
+      <a class="standings-link" href='/index.html'>Standings Page</a>
+    </p>
     <script type="text/javascript">
       buildTeamPage();
     </script>
