--- a/public/draft.html
+++ b/public/draft.html
@@ -1,17 +1,15 @@
 <html>
   <head>
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/jquery.autocomplete.css">
+    <link href="css/draft.css" rel="stylesheet">
     <script language="javascript" type="text/javascript" src="/scripts/jquery-1.6.2.js" ></script>
+    <script language="javascript" type="text/javascript" src="/scripts/jquery.autocomplete.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/reconnecting-websocket.min.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/underscore.js" ></script>
+    <script language="javascript" type="text/javascript" src="/scripts/draft.js" ></script>
     <title>Fantasy March Draft</title>
   </head>
-  <style type="text/css">
-       body { background: #BDBDBD; }
-       .chat-container { padding-top: 10px; padding-bottom: 10px;}
-       .chat { height: 225px; overflow-y: auto;}
-       .chat-timestamp { padding-right: 5px; font-size: smaller;} 
-  </style>
   <body>
   <div class="navbar">
     <div class="navbar-inner">
@@ -19,43 +17,57 @@
     </div>
   </div>
   <div class="container">
-    <div class="hero-unit chat-container">
+    <div class="row-fluid team-row">
+      <div id="team-list">
+        <table class="table table-bordered table-light table-hover table-condensed">
+          <thead>
+            <tr>
+              <th>Team 1</th>
+              <th>Team 2</th>
+              <th>Team 3</th>
+              <th>Team 4</th>
+              <th>Team 5</th>
+              <th>Team 6</th>
+              <th>Team 7</th>
+              <th>Team 8</th>
+              <th>Team 9</th>
+              <th>Team 10</th>
+              <th>Team 11</th>
+              <th>Team 12</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <div class="row-fluid chat-row">
+      <div class="hero-unit chat-container span7">
         <div class='chat'>
         </div>
-      <input id="chat-text" class="input-block-level" type="text" placeholder=""></input>
+        <input id="chat-text" class="input-block-level" type="text" placeholder=""></input>
+      </div>
+      <div id="player-list" class="span5">
+        <table class="table table-bordered table-light table-condensed">
+          <thead>
+            <tr>
+              <td>Player Wish List</td>
+            </tr>
+            <tr>
+              <td>
+                <input id="player-search" class="input-xlarge" placeholder="Search for Players"></input>
+              </td>
+            </tr>
+          </thead>
+          <tbody>
+          <tr class="template">
+            <td class="draft-player"><i title="Remove Player From Wish List" class="icon-remove"></i><a class="name"></a></td>
+            <td><button class="draft-button btn btn-success">Draft</button></td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-  <script type="text/javascript">
-    var colors = ["Red", "Maroon", "Yellow", "Olive","Lime","Green","Aqua","Teal","Blue","Navy","Fuchsia","Purple"];
-    var ws = new ReconnectingWebSocket('ws://' + window.location.hostname + ':4568');
-    ws.onmessage = function(msg) { 
-      var parsed = JSON.parse(msg.data);
-      var msgDate = new Date(parsed.timestamp);
-      $('.chat').append($('<div>')
-        .append($('<span>').addClass('chat-timestamp').text(msgDate.getHours() % 12 + ':' + twoDigit(msgDate.getMinutes()) + ':' + twoDigit(msgDate.getSeconds())))
-        .append($('<span>').text(parsed.user + ': ').css('color',colors[parsed.userId]))
-        .append($('<span>').text(parsed.message)));
-
-      if(($('.chat div').length - 1) * 30 - $('.chat').scrollTop() > $('.chat').height()){
-        console.log('no scroll');
-      }
-      else {
-        $('.chat').scrollTop(9999); // 30 * num rows?
-      }
-    };
-    function twoDigit(val){
-      if(val < 10){
-        return '0' + val;
-      }
-      return val;
-    }
-    function send(msg) { ws.send(JSON.stringify({timestamp: new Date().getTime(), userId : new Date().getTime() % 12, user : window.location.search.split('?')[1], message: msg}));}
-    $('#chat-text').keypress(function (e){
-      if(e.keyCode.toString() == 13) {
-        send($(this).val());
-        $(this).val('');
-      }
-    })
-  </script>
   </body>
 </html>
