adding draft picks to UI and backend

--- a/public/draft.html
+++ b/public/draft.html
@@ -22,19 +22,7 @@
         <table class="table table-bordered table-light table-hover table-condensed">
           <thead>
             <tr>
-              <th></th>
-              <th>Team 1</th>
-              <th>Team 2</th>
-              <th>Team 3</th>
-              <th>Team 4</th>
-              <th>Team 5</th>
-              <th>Team 6</th>
-              <th>Team 7</th>
-              <th>Team 8</th>
-              <th>Team 9</th>
-              <th>Team 10</th>
-              <th>Team 11</th>
-              <th>Team 12</th>
+              <th class="round-num"></th>
             </tr>
           </thead>
           <tbody>
