adding badges to standings page to display number alive, current, and lost

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
   <div id="templates">
     <div class="team-container">
       <div class="team row">
+        <span class="badge badge-success"></span>
+        <span class="badge badge-warning"></span>
+        <span class="badge badge-important"></span>
         <span class="team-title"></span>
         <span class="pull-right team-total"></span>
       </div>
