adding in drop down for historical standings pages

--- a/public/draft.html
+++ b/public/draft.html
@@ -3,7 +3,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/jquery.autocomplete.css">
     <link href="css/draft.css" rel="stylesheet">
-    <script language="javascript" type="text/javascript" src="/scripts/jquery-1.6.2.js" ></script>
+    <script language="javascript" type="text/javascript" src="/scripts/jquery-1.9.1.min.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/jquery.autocomplete.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/reconnecting-websocket.min.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/underscore.js" ></script>
