--- a/public/history/2012.html
+++ b/public/history/2012.html
@@ -1,13 +1,23 @@
 <html><head>
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <script language="javascript" type="text/javascript" src="/scripts/jquery-1.6.2.js"></script>
+    <script language="javascript" type="text/javascript" src="/scripts/jquery-1.9.1.min.js"></script>
+    <script language="javascript" type="text/javascript" src="/js/bootstrap.js" ></script>
     <title>FantasyMarch</title>
   </head>
   <body>
   <div class="navbar">
     <div class="navbar-inner">
       <span class="brand">Fantasy March Madness 2012 Standings</span>
+      <ul class="nav">
+        <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Historical Standings<b class="caret"></b> </a>
+        <ul class="dropdown-menu">
+          <li><a href="/">2013</a></li>
+          <li><a href="/history/2011.html">2011</a></li>
+        </ul>
+        </li>
+      </ul>
     </div>
   </div>
   <button type="button" class="btn hideshow">Hide Players</button> 
