adding clock to count time since last pick or reload

--- a/public/draft.html
+++ b/public/draft.html
@@ -43,6 +43,7 @@
       </div>
       <div class="span6">
         <input id="player-search" class="input-xxlarge" placeholder="Search for Players to Draft"></input>
+        <span class='timer'>0</span>
         <div id="player-list">
           <table class="table table-bordered table-light table-condensed">
             <tbody>
