adding round next to player name

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,10 @@
     </div>
     <div class="players"></div>
     <div class="player row">
-      <div class="player-name"></div>
+      <div class="player-name">
+        <span class="player-round"></span>
+        <span class="name"></span>
+      </div>
         <div class="game0 game"></div>
         <div class="game1 game"></div>
         <div class="game2 game"></div>
