adding in more stats

--- a/public/index.html
+++ b/public/index.html
@@ -49,15 +49,32 @@
         </div>
         <div class="span2 player-total"></div>
       </div>
-      <div class='player-games container-fluid'></div>
+      <div class='player-games container-fluid'>
+        <div class="player-game row-fluid">
+          <div class="span2"></div>
+          <div class="span1"></div>
+          <div class="span1">Pts</div>
+          <div class="span1">Reb</div>
+          <div class="span1">Ast</div>
+          <div class="span1">Stl</div>
+          <div class="span1">3pt</div>
+          <div class="span1"></div>
+          <div class="span2 game-total">Total</div>
+          <div class="span1"></div>
+        </div>
+      </div>
     </div>
-    <div class="player-game row-fluid">
+    <div class="player-game details row-fluid">
       <div class="span2 game-link"></div>
       <div class="span1"></div>
-      <div class="span2 points"></div>
-      <div class="span2 rebounds"></div>
-      <div class="span3"></div>
+      <div class="span1 points"></div>
+      <div class="span1 rebounds"></div>
+      <div class="span1 assists"></div>
+      <div class="span1 steals"></div>
+      <div class="span1 threes"></div>
+      <div class="span1"></div>
       <div class="span2 game-total"></div>
+      <div class="span1"></div>
     </div>
   </div>
   </body>
