Adding Blocks and only counting top 8 per team

--- a/public/index.html
+++ b/public/index.html
@@ -57,9 +57,10 @@
           <div class="span1">Reb</div>
           <div class="span1">Ast</div>
           <div class="span1">Stl</div>
+          <div class="span1">Blk</div>
           <div class="span1">3pt</div>
           <div class="span1"></div>
-          <div class="span2 game-total">Total</div>
+          <div class="span1 game-total">Total</div>
           <div class="span1"></div>
         </div>
       </div>
@@ -71,9 +72,10 @@
       <div class="span1 rebounds"></div>
       <div class="span1 assists"></div>
       <div class="span1 steals"></div>
+      <div class="span1 blocks"></div>
       <div class="span1 threes"></div>
       <div class="span1"></div>
-      <div class="span2 game-total"></div>
+      <div class="span1 game-total"></div>
       <div class="span1"></div>
     </div>
   </div>
