--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
   <div class="navbar">
     <div class="navbar-inner">
       <span class="brand">Big Ten Fantasy Basketball Standings</span>
+      <ul class="nav">
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Historical Standings<b class="caret"></b> </a>
+          <ul class="dropdown-menu history-links">
+          </ul>
+        </li>
+      </ul>
       <span class="log-in pull-right">
         <form class="navbar-form" action="/" method="post">
           <button class="btn" type="submit">Sign In</button>
