saving draft wishlist

--- a/public/draft.html
+++ b/public/draft.html
@@ -48,7 +48,12 @@
           <table class="table table-bordered table-light table-condensed">
             <tbody>
             <tr class="template">
-              <td class="draft-player"><i title="Remove Player From Wish List" class="icon-remove"></i><a class="name"></a></td>
+              <td class="draft-player">
+                <i title="Remove Player From Wish List" class="icon-remove"></i>
+                <i class="no-padding icon-arrow-up"></i>
+                <i class="no-padding icon-arrow-down"></i>
+                <a class="name"></a>
+              </td>
               <td><button class="pull-right draft-button btn btn-success btn-small">Draft</button></td>
             </tr>
             </tbody>
