--- a/public/draft.html
+++ b/public/draft.html
@@ -7,6 +7,7 @@
     <script language="javascript" type="text/javascript" src="/scripts/jquery.autocomplete.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/reconnecting-websocket.min.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/underscore.js" ></script>
+    <script language="javascript" type="text/javascript" src="/js/sugar.1.4.1.min.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/draft.js" ></script>
     <title>Fantasy March Draft</title>
   </head>
