adding display for undrafted players

--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,10 @@
   </div>
   <button type="button" class="btn hideshow-players">Show Players</button> 
   <button type="button" class="btn hideshow-games">Show Games</button> 
+  <button type="button" class="btn hideshow-undrafted">Show Undrafted</button> 
   <span class='updated'></span>
   <div class='teams container-fluid'></div>
+  <div class="undrafted-container container-fluid"></div>
   <script type="text/javascript">
     $(document).ready(standingsOnLoad);
   </script>
