--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
           <li>
           <a href="/draft">Draft Page</a>
           </li>
+          <li class="waiver">
+          <a href="/waiver">Waiver Page</a>
+          </li>
         </ul>
       </span>
       </span>
