--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <script language="javascript" type="text/javascript" src="/js/sugar.1.4.1.min.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/underscore.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/standings.js" ></script>
+    <script language="javascript" type="text/javascript" src="/scripts/rules.js" ></script>
     <title>B1G 10 Fantasy</title>
   </head>
   <body>
