--- a/public/draft.html
+++ b/public/draft.html
@@ -9,6 +9,7 @@
     <script language="javascript" type="text/javascript" src="/scripts/underscore.js" ></script>
     <script language="javascript" type="text/javascript" src="/js/sugar.1.4.1.min.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/draft.js" ></script>
+    <script language="javascript" type="text/javascript" src="/scripts/rules.js" ></script>
     <title>Fantasy March Draft</title>
   </head>
   <body>
