--- a/public/waiver.html
+++ b/public/waiver.html
@@ -9,6 +9,7 @@
     <script language="javascript" type="text/javascript" src="/scripts/underscore.js" ></script>
     <script language="javascript" type="text/javascript" src="/js/sugar.1.4.1.min.js" ></script>
     <script language="javascript" type="text/javascript" src="/scripts/waiver.js" ></script>
+    <script language="javascript" type="text/javascript" src="/scripts/rules.js" ></script>
     <title>Fantasy March Waiver Wire</title>
   </head>
   <body>
