--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,6 @@
       <div class='player-games container-fluid'>
         <div class="player-game row-fluid">
           <div class="span2"></div>
-          <div class="span1"></div>
           <div class="span1">Pts</div>
           <div class="span1">Reb</div>
           <div class="span1">Ast</div>
@@ -73,14 +72,14 @@
           <div class="span1">Blk</div>
           <div class="span1">3pt</div>
           <div class="span1"></div>
+          <div class="span1">Sum</div>
+          <div class="span1">Mult</div>
           <div class="span1 game-total">Total</div>
-          <div class="span1"></div>
         </div>
       </div>
     </div>
     <div class="player-game details row-fluid">
       <div class="span2 game-link"></div>
-      <div class="span1"></div>
       <div class="span1 points"></div>
       <div class="span1 rebounds"></div>
       <div class="span1 assists"></div>
@@ -88,8 +87,9 @@
       <div class="span1 blocks"></div>
       <div class="span1 threes"></div>
       <div class="span1"></div>
+      <div class="span1 base"></div>
+      <div class="span1 multiplier"></div>
       <div class="span1 game-total"></div>
-      <div class="span1"></div>
     </div>
   </div>
   </body>
