adding captain page

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,9 @@
           <li class="waiver">
           <a href="/waiver">Waiver Page</a>
           </li>
+          <li class="">
+          <a href="/captain">Captain</a>
+          </li>
         </ul>
       </span>
       </span>
