updating rules and captains page for 2023

--- a/public/captain.html
+++ b/public/captain.html
@@ -21,13 +21,16 @@
     </div>
   </div>
   <div class='container-fluid'>
+    <input disabled type='text' value="Captain"></input>
+    <input disabled type='text' value="Super Captain"></input>
     <ul class="players">
     </ul>
   </div>
   
   <div class='template player'>
     <div class='name'></div>
-    <input type='date'></input>
+    <input class="regular" type='date'></input>
+    <input class="super" type='date'></input>
     <button class='btn'>Save</button>
   </div>
   </body>
